<resources>
    <string name="app_name">mobile-calculator</string>
    <string name="app_title">Mobile\nCalculator</string>
    <string name="simple_calculator">Simple Calculator</string>
    <string name="scientific_calculator">Scientific Calculator</string>
    <string name="exit">Exit</string>
    <string name="calculator_result">0</string>
    <string name="calculator_clear">C</string>
    <string name="calculator_clear_all">AC</string>
    <string name="calculator_sign">⁺∕₋</string>
    <string name="calculator_percent">%</string>
    <string name="calculator_divide">÷</string>
    <string name="calculator_seven">7</string>
    <string name="calculator_eight">8</string>
    <string name="calculator_nine">9</string>
    <string name="calculator_four">4</string>
    <string name="calculator_five">5</string>
    <string name="calculator_six">6</string>
    <string name="calculator_multiply">x</string>
    <string name="calculator_minus">-</string>
    <string name="calculator_one">1</string>
    <string name="calculator_two">2</string>
    <string name="calculator_three">3</string>
    <string name="calculator_plus">+</string>
    <string name="calculator_zero">0</string>
    <string name="calculator_point">.</string>
    <string name="calculator_equal">=</string>
    <string name="calculator_shift">SHIFT</string>
    <string name="calculator_rad">RAD</string>
    <string name="calculator_fse">FSE</string>
    <string name="calculator_mr">MR</string>
    <string name="calculator_ms">MS</string>
    <string name="calculator_mplus">M+</string>
    <string name="calculator_hyp">hyp</string>
    <string name="calculator_sin">sin</string>
    <string name="calculator_cos">cos</string>
    <string name="calculator_tan">tan</string>
    <string name="calculator_ln">ln</string>
    <string name="calculator_log">log</string>
    <string name="calculator_power">x^y</string>
    <string name="calculator_sqrt">√</string>
    <string name="calculator_factorial">n!</string>
    <string name="calculator_bracket_open">(</string>
    <string name="calculator_bracket_close">)</string>
    <string name="credits">About me</string>
    <string name="credits_text">My name is Dominik.\nI am 3rd-year student of informatics specialization.\nCheck my other projects on Github.</string>
    <string name="credits_link">ExaggeratedRumors\n© 2024</string>
    <string name="calculator_double">x^2</string>
</resources>