<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:singleLine="false"
        android:text="@string/app_title"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/design_default_color_primary"
        android:fontFamily="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/simple_calculator_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:fontFamily="monospace"
        android:text="@string/simple_calculator"
        android:background="@drawable/rectangle_button"
        app:layout_constraintBottom_toTopOf="@+id/scientific_calculator_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/scientific_calculator_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:fontFamily="monospace"
        android:text="@string/scientific_calculator"
        android:background="@drawable/rectangle_button"
        app:layout_constraintBottom_toTopOf="@+id/credits_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/credits_btn"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="2dp"
        android:textSize="30sp"
        android:fontFamily="monospace"
        android:text="@string/credits"
        android:background="@drawable/rectangle_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

</androidx.constraintlayout.widget.ConstraintLayout>